[gd_scene load_steps=4 format=3 uid="uid://c3khjoqw21q61"]

[ext_resource type="Texture2D" uid="uid://b55jk2megj4fm" path="res://assets/sprites/message.png" id="1_gpm4n"]
[ext_resource type="Script" path="res://scripts/menu.gd" id="1_qh6wc"]
[ext_resource type="FontFile" uid="uid://bg8wy7bemt4cm" path="res://assets/fonts/flappyfont.TTF" id="3_hrh1b"]

[node name="Menu" type="CanvasLayer"]
script = ExtResource("1_qh6wc")

[node name="StartMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartMessage" type="TextureRect" parent="StartMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -92.0
offset_top = -185.0
offset_right = 92.0
offset_bottom = 82.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_gpm4n")

[node name="GameOverMenu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -92.0
offset_top = -173.0
offset_right = 92.0
offset_bottom = -14.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="ScoreLabel" type="Label" parent="GameOverMenu/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_hrh1b")
theme_override_font_sizes/font_size = 32
text = "SCORE: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HighScoreLabel" type="Label" parent="GameOverMenu/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_hrh1b")
theme_override_font_sizes/font_size = 32
text = "BEST: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartButton" type="Button" parent="GameOverMenu/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_hrh1b")
theme_override_font_sizes/font_size = 32
text = "RESTART"

[connection signal="pressed" from="GameOverMenu/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
